added key learnings

--- a/app/views/release/index.html
+++ b/app/views/release/index.html
@@ -22,7 +22,8 @@
         What we did
       </h2>
       <h4 class="govuk-heading-s">PPCS - Calculate tariff expiry date</h4>
-      <p class="govuk-body">...</p>
+      <p class="govuk-body">Currently to calculate the Tariff expiration date some have their own spreadsheet with formulas, others do it manually. It doesn't need to be that way as some can be calculated automatically.</p>
+      <p class="govuk-body">We tested a prototype to help PPCS to calculate it so the review goes ahead.</p>
 
         <h4 class="govuk-heading-s">PPCS - Collect documents for the dossier </h4>
       <p class="govuk-body">Currently PPCS collects and chases all the documents via email, that they need to then manually upload on PPUD.</p>
@@ -36,9 +37,9 @@
         What we didn't do
       </h2>
        <ul class="govuk-list govuk-list--bullet">
-        <li>..</li>
-         <li></li>
-         <li>pears</li>
+        <li>Scheduling</li>
+         <li>Work allocation</li>
+         <li>Testing in real time how handovers would work</li>
 </ul>
         
          <h2 class="govuk-heading-m">
@@ -53,7 +54,28 @@
       <h2 class="govuk-heading-m">
         What we learned
       </h2>
-      <p class="govuk-body">...</p>
+      <h4 class="govuk-heading-s">PPCS Initial Action team - Calculate tariff expiry date</h4>
+       <ul class="govuk-list govuk-list--bullet">
+        <li>The overview was useful to every participant, however some of them didn’t understand at the beginning that the information about the offender was automatically pulled from Nomis.</li>
+        <li>In the cases where we can’t provide the data automatically, having the relevant documents close to them saved users time.</li>
+        <li>Dividing their to-do list on new or in-progress cases wasn’t useful. The second iteration organised by groups of tasks worked well. (ie. Check and request documents, Calculate TED etc)</li>
+        </ul>
+
+     <h4 class="govuk-heading-s">PPCS - Collect documents for the dossier</h4>
+       <ul class="govuk-list govuk-list--bullet">
+        <li>To onboard users, the new product should explain what’s different and what they don’t need to do anymore. Start pages worked well for this.</li>
+         <li>Documents automatically checked for errors weren’t always trusted. Some users preferred to check it themselves.</li>
+          <li>Being able to request documents and send automatic reminders was really useful and time saving for users.</li>
+        </ul>
+
+        <h4 class="govuk-heading-s">Community Offender Manager – Provide documents</h4>
+        <p class="govuk-body">Because of research participants availability we weren't able to conduct any concept testing with participants.</p>  
+         
+          <h4 class="govuk-heading-s">MCA - Check documents for the Parole Board</h4>
+       <ul class="govuk-list govuk-list--bullet">
+        <li>Showing the dossier overview and structure worked. Participants recognised the documents that needed additional checks.</li>
+        <li>Similar to previous research sessions, documents automatically checked for errors weren’t always trusted. Some users preferred to check it themselves.</li>
+        </ul>
 
 
       <h2 class="govuk-heading-m">
