--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,7 +16,17 @@
         <h1 class="govuk-heading-xl">
           Public Protection Unit Database
         </h1>
-        <p class="govuk-body">What is the project</p>
+        <p class="govuk-body">From May - June 2020, a Discovery into the existing Public Protection Unit Database (PPUD) was undertaken to explore what would be required for PPUD to become a modern, flexible, supportable, and user-centred service that:</p>
+<ul class="govuk-list govuk-list--bullet govuk-list--spaced">
+  <li>enables the effective and secure release and recall of offenders</li>
+<li>diverts patients to the mental health system</li>
+<li>supports the investigation of complaints and fatal incidents in justice settings</li>
+        </ul>
+
+A number of significant issues were identified with the existing service that led to a recommendation that the monolithic PPUD service be deprecated and replaced by a number of modern services, centred around the outcomes that each organisation using PPUD is trying to achieve, built according to modern technology standards. 
+
+        <p class="govuk-body">These new services should be hosted, maintained and supported by the MoJ’s Digital Studio.</p>
+      
         <p class="govuk-body">Where is it going</p>
       </div>
     </div>
