--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,18 +16,29 @@
         <h1 class="govuk-heading-xl">
           Public Protection Unit Database
         </h1>
-        <p class="govuk-body">From May - June 2020, a Discovery into the existing Public Protection Unit Database (PPUD) was undertaken to explore what would be required for PPUD to become a modern, flexible, supportable, and user-centred service that:</p>
-<ul class="govuk-list govuk-list--bullet govuk-list--spaced">
+        <p class="govuk-body">From May - June 2020 we did a discovery to explore what would be required for the Public Protection Unit Database (PPUD) to become a modern, flexible, supportable, and user-centred service that:</p>
+<ul class="govuk-list govuk-list--bullet">
   <li>enables the effective and secure release and recall of offenders</li>
 <li>diverts patients to the mental health system</li>
 <li>supports the investigation of complaints and fatal incidents in justice settings</li>
         </ul>
 
-A number of significant issues were identified with the existing service that led to a recommendation that the monolithic PPUD service be deprecated and replaced by a number of modern services, centred around the outcomes that each organisation using PPUD is trying to achieve, built according to modern technology standards. 
+<p class="govuk-body">A number of significant issues were identified with the existing service that led to a recommendation that the monolithic PPUD service be deprecated and replaced by a number of modern services, centred around the outcomes that each organisation using PPUD is trying to achieve, built according to modern technology standards. These new services should be hosted, maintained and supported by the MoJ’s Digital Studio.</p> 
 
-        <p class="govuk-body">These new services should be hosted, maintained and supported by the MoJ’s Digital Studio.</p>
+        <p class="govuk-body">From July to October 2020 we run an Alpha with 3 objectives:</p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>De-risk data migration</li>
+          <li>What information can be reused or repurposed</li>
+          <li>Allow for better collaboration and  more efficient work</li>
+        </ul>
       
-        <p class="govuk-body">Where is it going</p>
+        <p class="govuk-body">Our recommendation is to build different services with common components to better reflect the user journeys they support</p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>Managing a parole review (PPCS-PB)</li>
+          <li>Managing a recall (PPCS-PB)</li>
+          <li>Managing a transfer to a hospital (MHCS)</li>
+          <li>Managing a complaint in a justice setting (PPO)</li>
+       </ul>
       </div>
     </div>
   </div>
@@ -41,7 +52,7 @@ A number of significant issues were identified with the existing service that le
     <h2 class="govuk-heading-l">Resources</h2>
 
     <h3 class="govuk-heading-m">Final report</h3>
-    <p class="govuk-body">Final report that summarises the work we've done over the last three months.</p>
+    <p class="govuk-body">Final report that summarises the work we've done from July to October 2020.</p>
     <p class="govuk-body"><a href="https://docs.google.com/presentation/d/11FFU_sP7LpMGkc2nohWB1SB_ToqttfVsUIP0Ir-f59Q/edit?usp=sharing" class="govuk-link">View</a></p>
 
     <h3 class="govuk-heading-m">Technical report</h3>
@@ -49,7 +60,7 @@ A number of significant issues were identified with the existing service that le
     <p class="govuk-body"><a href="#" class="govuk-link">View</a></p>
 
     <h3 class="govuk-heading-m">Discovery report</h3>
-    <p class="govuk-body">Report with the findings from Discovery</p>
+    <p class="govuk-body">Report with the findings from Discovery from May to June 2020</p>
     <p class="govuk-body"><a href="https://drive.google.com/file/d/1Cu97tAYHvQsNyQwhSaYzU-f612icRmRy/view?usp=sharing" class="govuk-link">View</a></p>
     
     <h3 class="govuk-heading-m">Design files</h3>
