--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,6 +16,8 @@
         <h1 class="govuk-heading-xl">
           Public Protection Unit Database
         </h1>
+        
+        <h3 class="govuk-heading-m">Discovery</h3>
         <p class="govuk-body">From May - June 2020 we did a discovery to explore what would be required for the Public Protection Unit Database (PPUD) to become a modern, flexible, supportable, and user-centred service that:</p>
 <ul class="govuk-list govuk-list--bullet">
   <li>enables the effective and secure release and recall of offenders</li>
@@ -23,8 +25,9 @@
 <li>supports the investigation of complaints and fatal incidents in justice settings</li>
         </ul>
 
-<p class="govuk-body">A number of significant issues were identified with the existing service that led to a recommendation that the monolithic PPUD service be deprecated and replaced by a number of modern services, centred around the outcomes that each organisation using PPUD is trying to achieve, built according to modern technology standards. These new services should be hosted, maintained and supported by the MoJ’s Digital Studio.</p> 
+<p class="govuk-body">A number of significant issues were identified with the existing service that led to a recommendation that the monolithic PPUD service be deprecated and replaced by a number of modern services hosted, maintained and supported by the MoJ’s Digital Studio.</p> 
 
+        <h3 class="govuk-heading-m">Alpha</h3>
         <p class="govuk-body">From July to October 2020 we run an Alpha with 3 objectives:</p>
         <ul class="govuk-list govuk-list--bullet">
           <li>De-risk data migration</li>
