add link to tech report on homepage

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,7 +16,7 @@
         <h1 class="govuk-heading-xl">
           Public Protection Unit Database
         </h1>
-        
+
         <h3 class="govuk-heading-m">Discovery</h3>
         <p class="govuk-body">From May - June 2020 we did a discovery to explore what would be required for the Public Protection Unit Database (PPUD) to become a modern, flexible, supportable, and user-centred service that:</p>
 <ul class="govuk-list govuk-list--bullet">
@@ -25,7 +25,7 @@
 <li>supports the investigation of complaints and fatal incidents in justice settings</li>
         </ul>
 
-<p class="govuk-body">A number of significant issues were identified with the existing service that led to a recommendation that the monolithic PPUD service be deprecated and replaced by a number of modern services hosted, maintained and supported by the MoJ’s Digital Studio.</p> 
+<p class="govuk-body">A number of significant issues were identified with the existing service that led to a recommendation that the monolithic PPUD service be deprecated and replaced by a number of modern services hosted, maintained and supported by the MoJ’s Digital Studio.</p>
 
         <h3 class="govuk-heading-m">Alpha</h3>
         <p class="govuk-body">From July to October 2020 we run an Alpha with 3 objectives:</p>
@@ -34,7 +34,7 @@
           <li>What information can be reused or repurposed</li>
           <li>Allow for better collaboration and  more efficient work</li>
         </ul>
-      
+
         <p class="govuk-body">Our recommendation is to build different services with common components to better reflect the user journeys they support</p>
         <ul class="govuk-list govuk-list--bullet">
           <li>Managing a parole review (PPCS-PB)</li>
@@ -59,13 +59,13 @@
     <p class="govuk-body"><a href="https://docs.google.com/presentation/d/11FFU_sP7LpMGkc2nohWB1SB_ToqttfVsUIP0Ir-f59Q/edit?usp=sharing" class="govuk-link">View</a></p>
 
     <h3 class="govuk-heading-m">Technical report</h3>
-    <p class="govuk-body"></p>
-    <p class="govuk-body"><a href="#" class="govuk-link">View</a></p>
+    <p class="govuk-body">Detailed technical analysis and recommendations</p>
+    <p class="govuk-body"><a href="https://docs.google.com/document/d/1vg8i7tiIOSlAmLrJaXR13aIeQDclG85-zj4JljDHwME/edit#" class="govuk-link">View</a></p>
 
     <h3 class="govuk-heading-m">Discovery report</h3>
     <p class="govuk-body">Report with the findings from Discovery from May to June 2020</p>
     <p class="govuk-body"><a href="https://drive.google.com/file/d/1Cu97tAYHvQsNyQwhSaYzU-f612icRmRy/view?usp=sharing" class="govuk-link">View</a></p>
-    
+
     <h3 class="govuk-heading-m">Design files</h3>
     <p class="govuk-body">Figma documents for some of the prototypes that we tested with interactive PDFs</p>
     <p class="govuk-body"><a href="/public/files/pdf-prototypes/prototypes-ppud-alpha.fig" class="govuk-link">View</a></p>
