add description of the API mocks experiment

--- a/app/views/experiments.html
+++ b/app/views/experiments.html
@@ -54,6 +54,23 @@ Experiments
 
                 </div>
             </div>
+
+            <div class="moj-timeline__item">
+                <div class="moj-timeline__header">
+                    <h2 class="moj-timeline__title">API Mocks</h2>
+                </div>
+                <p class="moj-timeline__date">
+                    <time datetime="2020-08-05T00:00:00.000Z">5 August 2020</time>
+                </p>
+                <div class="moj-timeline__description">
+                    <p>We identified that access to test environment and APIs may become a blocker to deveopment teams.</p>
+                    <p>In order to remove that blocker, we tested whether it was possible to provide mocked APIs and configure our own test data, using published API specifications.</p>
+                    <p>This application provides mock APIs for the RESTful Prison and Community APIs, as well as the SOAP-style PPUD WAM API, should it be needed.</p>
+                    <a class="govuk-button" href="https://github.com/dxw/moj-ppud-api-mocks">View on GitHub</a>
+
+                </div>
+            </div>
+
         </div>
 
     </div>
