--- a/app/views/experiments.html
+++ b/app/views/experiments.html
@@ -16,7 +16,30 @@ Experiments
         </h1>
 
 
+
+
         <div class="moj-timeline">
+
+            <div class="moj-timeline__item">
+                <div class="moj-timeline__header">
+                    <h2 class="moj-timeline__title">Technical Architecture diagrams</h2>
+                </div>
+                <p class="moj-timeline__date">
+                    <time datetime="2020-10-05T00:00:00.000Z">05 October 2020</time>
+                </p>
+                <div class="moj-timeline__description">
+                    <p>In order to describe the future system architecture, and perform analysis of the legacy PPUD database, we created a series of diagrams:</p>
+                    <ul class="govuk-list govuk-list--bullet">
+                        <li>Overall system context diagram</li>
+                        <li>Container diagrams for new frontend and API services</li>
+                        <li>Legacy database entity-relationship diagrams</li>
+                        <li>High-level service-oriented ERDs for the legacy database</li>
+                    </ul>
+                    <p>The linked repository contains both rendered diagrams, and PlantUML source code for them.</p>
+                    <a class="govuk-button" href="https://github.com/dxw/moj-ppud-alpha-technical-architecture/tree/main/png">View on GitHub</a>
+                </div>
+            </div>
+
             <div class="moj-timeline__item">
                 <div class="moj-timeline__header">
                     <h2 class="moj-timeline__title">PPUD Legacy API wrapper</h2>
