--- a/app/views/index.html
+++ b/app/views/index.html
@@ -67,8 +67,8 @@
     <p class="govuk-body"><a href="https://drive.google.com/file/d/1Cu97tAYHvQsNyQwhSaYzU-f612icRmRy/view?usp=sharing" class="govuk-link">View</a></p>
 
     <h3 class="govuk-heading-m">Design files</h3>
-    <p class="govuk-body">Figma documents for some of the prototypes that we tested with interactive PDFs</p>
-    <p class="govuk-body"><a href="/public/files/pdf-prototypes/prototypes-ppud-alpha.fig" class="govuk-link">View</a></p>
+    <p class="govuk-body">Figma documents for some of the prototypes that we tested with interactive PDFs. <a href="/public/files/pdf-prototypes/prototypes-ppud-alpha.fig" class="govuk-link">View</a></p>
+    <p class="govuk-body">Miro board with journey maps explored during Alpha. <a href="https://miro.com/app/board/o9J_kipwTPQ=/" class="govuk-link">View</a></p>
   </div>
 </div>
 
