Change report links to point to PDF versions

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -56,11 +56,11 @@
 
     <h3 class="govuk-heading-m">Final report</h3>
     <p class="govuk-body">Final report that summarises the work we've done from July to October 2020.</p>
-    <p class="govuk-body"><a href="https://docs.google.com/presentation/d/11FFU_sP7LpMGkc2nohWB1SB_ToqttfVsUIP0Ir-f59Q/edit?usp=sharing" class="govuk-link">View</a></p>
+    <p class="govuk-body"><a href="https://drive.google.com/file/d/1LAnZ6sGEy51nWWt_fnwflu3VBH_ufphc/view?usp=sharing" class="govuk-link">View</a></p>
 
     <h3 class="govuk-heading-m">Technical report</h3>
     <p class="govuk-body">Detailed technical analysis and recommendations</p>
-    <p class="govuk-body"><a href="https://docs.google.com/document/d/1vg8i7tiIOSlAmLrJaXR13aIeQDclG85-zj4JljDHwME/edit#" class="govuk-link">View</a></p>
+    <p class="govuk-body"><a href="https://drive.google.com/file/d/1O-HJuL-nim1pdgxtqLFTgp_2JFUiRXgj/view?usp=sharing" class="govuk-link">View</a></p>
 
     <h3 class="govuk-heading-m">Discovery report</h3>
     <p class="govuk-body">Report with the findings from Discovery from May to June 2020</p>
